@@ -970,6 +970,11 @@ extern int select_p_get_info_from_plugin (enum select_plugindata_info dinfo,
 	return rc;
 }
 
+extern int select_p_update_node_config (int index)
+{
+	return SLURM_SUCCESS;
+}
+
 extern int select_p_update_node_state (int index, uint16_t state)
 {
 	int x, y, z;
