@@ -2242,6 +2242,11 @@ extern int select_p_get_info_from_plugin (enum select_jobdata_type info,
 	return SLURM_SUCCESS;
 }
 
+extern int select_p_update_node_config (int index)
+{
+	return SLURM_SUCCESS;
+}
+
 extern int select_p_update_node_state (int index, uint16_t state)
 {
 	return SLURM_SUCCESS;
